// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csg invert, union, subtract, intersect 1`] = `
"v -1.5 -1.5 -1.5
v -1.5 -1.5 0.5
v -1.5 0.5 0.5
v -1.5 0.5 -1.5
v 0.5 -1.5 -1.5
v 0.5 -0.5 -1.5
v 0.5 -0.5 0.5
v 0.5 -1.5 0.5
v 0.5 -0.5 -1.5
v 0.5 0.5 -1.5
v 0.5 0.5 -0.5
v 0.5 -0.5 -0.5
v 1.5 -0.5 -0.5
v 1.5 1.5 -0.5
v 1.5 1.5 1.5
v 1.5 -0.5 1.5
v 0.5 -0.5 -0.5
v 1.5 -0.5 -0.5
v 1.5 -0.5 1.5
v 0.5 -0.5 1.5
v 0.5 1.5 1.5
v 1.5 1.5 1.5
v 1.5 1.5 -0.5
v 0.5 1.5 -0.5
v 0.5 1.5 -0.5
v 1.5 1.5 -0.5
v 1.5 -0.5 -0.5
v 0.5 -0.5 -0.5
v 0.5 -0.5 1.5
v 1.5 -0.5 1.5
v 1.5 1.5 1.5
v 0.5 1.5 1.5
v -1.5 -1.5 -1.5
v -0.5 -1.5 -1.5
v -0.5 -1.5 0.5
v -1.5 -1.5 0.5
v -0.5 -1.5 -1.5
v 0.5 -1.5 -1.5
v 0.5 -1.5 0.5
v -0.5 -1.5 0.5
v -1.5 0.5 -1.5
v -1.5 0.5 0.5
v -0.5 0.5 0.5
v -0.5 0.5 -1.5
v 0.5 0.5 -0.5
v 0.5 0.5 -1.5
v -0.5 0.5 -1.5
v -0.5 0.5 -0.5
v -0.5 0.5 1.5
v -0.5 1.5 1.5
v -0.5 1.5 -0.5
v -0.5 0.5 -0.5
v -0.5 1.5 -0.5
v -0.5 1.5 1.5
v 0.5 1.5 1.5
v 0.5 1.5 -0.5
v -0.5 0.5 -0.5
v -0.5 1.5 -0.5
v 0.5 1.5 -0.5
v 0.5 0.5 -0.5
v 0.5 0.5 1.5
v 0.5 1.5 1.5
v -0.5 1.5 1.5
v -0.5 0.5 1.5
v -1.5 -1.5 -1.5
v -1.5 0.5 -1.5
v -0.5 0.5 -1.5
v -0.5 -1.5 -1.5
v 0.5 -0.5 -1.5
v 0.5 -1.5 -1.5
v -0.5 -1.5 -1.5
v -0.5 -0.5 -1.5
v -0.5 0.5 -1.5
v 0.5 0.5 -1.5
v 0.5 -0.5 -1.5
v -0.5 -0.5 -1.5
v -1.5 -1.5 0.5
v -0.5 -1.5 0.5
v -0.5 0.5 0.5
v -1.5 0.5 0.5
v -0.5 -1.5 0.5
v 0.5 -1.5 0.5
v 0.5 -0.5 0.5
v -0.5 -0.5 0.5
v -0.5 -0.5 0.5
v -0.5 -0.5 1.5
v -0.5 0.5 1.5
v -0.5 0.5 0.5
v 0.5 -0.5 0.5
v 0.5 -0.5 1.5
v -0.5 -0.5 1.5
v -0.5 -0.5 0.5
v -0.5 -0.5 1.5
v 0.5 -0.5 1.5
v 0.5 0.5 1.5
v -0.5 0.5 1.5
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
f 3//3 2//2 1//1
f 4//4 3//3 1//1
f 7//7 6//6 5//5
f 8//8 7//7 5//5
f 11//11 10//10 9//9
f 12//12 11//11 9//9
f 15//15 14//14 13//13
f 16//16 15//15 13//13
f 19//19 18//18 17//17
f 20//20 19//19 17//17
f 23//23 22//22 21//21
f 24//24 23//23 21//21
f 27//27 26//26 25//25
f 28//28 27//27 25//25
f 31//31 30//30 29//29
f 32//32 31//31 29//29
f 35//35 34//34 33//33
f 36//36 35//35 33//33
f 39//39 38//38 37//37
f 40//40 39//39 37//37
f 43//43 42//42 41//41
f 44//44 43//43 41//41
f 47//47 46//46 45//45
f 48//48 47//47 45//45
f 51//51 50//50 49//49
f 52//52 51//51 49//49
f 55//55 54//54 53//53
f 56//56 55//55 53//53
f 59//59 58//58 57//57
f 60//60 59//59 57//57
f 63//63 62//62 61//61
f 64//64 63//63 61//61
f 67//67 66//66 65//65
f 68//68 67//67 65//65
f 71//71 70//70 69//69
f 72//72 71//71 69//69
f 75//75 74//74 73//73
f 76//76 75//75 73//73
f 79//79 78//78 77//77
f 80//80 79//79 77//77
f 83//83 82//82 81//81
f 84//84 83//83 81//81
f 87//87 86//86 85//85
f 88//88 87//87 85//85
f 91//91 90//90 89//89
f 92//92 91//91 89//89
f 95//95 94//94 93//93
f 96//96 95//95 93//93
"
`;

exports[`csg invert, union, subtract, intersect 2`] = `
"v -1.5 -1.5 -1.5
v -1.5 -1.5 0.5
v -1.5 0.5 0.5
v -1.5 0.5 -1.5
v 0.5 -1.5 -1.5
v 0.5 -0.5 -1.5
v 0.5 -0.5 0.5
v 0.5 -1.5 0.5
v 0.5 -0.5 -0.5
v 0.5 -0.5 -1.5
v 0.5 0.5 -1.5
v 0.5 0.5 -0.5
v -1.5 -1.5 -1.5
v -0.5 -1.5 -1.5
v -0.5 -1.5 0.5
v -1.5 -1.5 0.5
v -0.5 -1.5 -1.5
v 0.5 -1.5 -1.5
v 0.5 -1.5 0.5
v -0.5 -1.5 0.5
v -0.5 0.5 -1.5
v -1.5 0.5 -1.5
v -1.5 0.5 0.5
v -0.5 0.5 0.5
v -0.5 0.5 -1.5
v -0.5 0.5 -0.5
v 0.5 0.5 -0.5
v 0.5 0.5 -1.5
v -0.5 -1.5 -1.5
v -1.5 -1.5 -1.5
v -1.5 0.5 -1.5
v -0.5 0.5 -1.5
v -0.5 -1.5 -1.5
v -0.5 -0.5 -1.5
v 0.5 -0.5 -1.5
v 0.5 -1.5 -1.5
v -0.5 -0.5 -1.5
v -0.5 0.5 -1.5
v 0.5 0.5 -1.5
v 0.5 -0.5 -1.5
v -1.5 -1.5 0.5
v -0.5 -1.5 0.5
v -0.5 0.5 0.5
v -1.5 0.5 0.5
v -0.5 -0.5 0.5
v -0.5 -1.5 0.5
v 0.5 -1.5 0.5
v 0.5 -0.5 0.5
v -0.5 0.5 -0.5
v -0.5 0.5 0.5
v -0.5 -0.5 0.5
v -0.5 -0.5 -0.5
v -0.5 -0.5 0.5
v 0.5 -0.5 0.5
v 0.5 -0.5 -0.5
v -0.5 -0.5 -0.5
v 0.5 -0.5 -0.5
v 0.5 0.5 -0.5
v -0.5 0.5 -0.5
v -0.5 -0.5 -0.5
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
f 3//3 2//2 1//1
f 4//4 3//3 1//1
f 7//7 6//6 5//5
f 8//8 7//7 5//5
f 11//11 10//10 9//9
f 12//12 11//11 9//9
f 15//15 14//14 13//13
f 16//16 15//15 13//13
f 19//19 18//18 17//17
f 20//20 19//19 17//17
f 23//23 22//22 21//21
f 24//24 23//23 21//21
f 27//27 26//26 25//25
f 28//28 27//27 25//25
f 31//31 30//30 29//29
f 32//32 31//31 29//29
f 35//35 34//34 33//33
f 36//36 35//35 33//33
f 39//39 38//38 37//37
f 40//40 39//39 37//37
f 43//43 42//42 41//41
f 44//44 43//43 41//41
f 47//47 46//46 45//45
f 48//48 47//47 45//45
f 51//51 50//50 49//49
f 52//52 51//51 49//49
f 55//55 54//54 53//53
f 56//56 55//55 53//53
f 59//59 58//58 57//57
f 60//60 59//59 57//57
"
`;

exports[`csg invert, union, subtract, intersect 3`] = `
"v 0.5 -0.5 -0.5
v 0.5 0.5 -0.5
v 0.5 0.5 0.5
v 0.5 -0.5 0.5
v -0.5 0.5 -0.5
v -0.5 0.5 0.5
v 0.5 0.5 0.5
v 0.5 0.5 -0.5
v -0.5 -0.5 0.5
v 0.5 -0.5 0.5
v 0.5 0.5 0.5
v -0.5 0.5 0.5
v -0.5 -0.5 -0.5
v -0.5 -0.5 0.5
v -0.5 0.5 0.5
v -0.5 0.5 -0.5
v -0.5 -0.5 -0.5
v 0.5 -0.5 -0.5
v 0.5 -0.5 0.5
v -0.5 -0.5 0.5
v -0.5 -0.5 -0.5
v -0.5 0.5 -0.5
v 0.5 0.5 -0.5
v 0.5 -0.5 -0.5
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
f 3//3 2//2 1//1
f 4//4 3//3 1//1
f 7//7 6//6 5//5
f 8//8 7//7 5//5
f 11//11 10//10 9//9
f 12//12 11//11 9//9
f 15//15 14//14 13//13
f 16//16 15//15 13//13
f 19//19 18//18 17//17
f 20//20 19//19 17//17
f 23//23 22//22 21//21
f 24//24 23//23 21//21
"
`;

exports[`csg invert, union, subtract, intersect 4`] = `
"v -1.5 0.5 -1.5
v -1.5 0.5 0.5
v -1.5 -1.5 0.5
v -1.5 -1.5 -1.5
v 0.5 -1.5 0.5
v 0.5 0.5 0.5
v 0.5 0.5 -1.5
v 0.5 -1.5 -1.5
v -1.5 -1.5 0.5
v 0.5 -1.5 0.5
v 0.5 -1.5 -1.5
v -1.5 -1.5 -1.5
v 0.5 0.5 -1.5
v 0.5 0.5 0.5
v -1.5 0.5 0.5
v -1.5 0.5 -1.5
v 0.5 -1.5 -1.5
v 0.5 0.5 -1.5
v -1.5 0.5 -1.5
v -1.5 -1.5 -1.5
v -1.5 0.5 0.5
v 0.5 0.5 0.5
v 0.5 -1.5 0.5
v -1.5 -1.5 0.5
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn 1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn -1 0 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 -1 0
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
vn 0 0 -1
f 3//3 2//2 1//1
f 4//4 3//3 1//1
f 7//7 6//6 5//5
f 8//8 7//7 5//5
f 11//11 10//10 9//9
f 12//12 11//11 9//9
f 15//15 14//14 13//13
f 16//16 15//15 13//13
f 19//19 18//18 17//17
f 20//20 19//19 17//17
f 23//23 22//22 21//21
f 24//24 23//23 21//21
"
`;
